# etlv-seq-6

./: .gitignore  Destinations.xlsx  LICENSE  Sequence_6_-_Green_journey.docx  eco_travel_presentation.md  pyproject.toml  requirements.txt
results/: eco_travel_analysis_presentation.pptx  key_findings.txt  travel_analysis_results.csv
src/: main.py
src/app/: __init__.py
src/app/calculations/: __init__.py  analysis.py
src/app/data/: __init__.py  constants.py
src/app/presentation/: generate_pptx.py
src/app/visualization/: __init__.py  plotting.py
tests/: test_analysis.py
